--- a/views/Profile.ejs
+++ b/views/Profile.ejs
@@ -96,25 +96,7 @@
                             <li class="dropdown mega-menu">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">Contact</a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li>
-                                        <!-- Start of Mega Menu Inner -->
-                                        <div class="mega-menu-inner">
-                                            <div class="row">
-                                                <ul class="col-md-4">
-                                                    <li class="menu-title">pages 1</li>
-                                                    <li><a href="about-us.html">about us</a></li>
-                                                    <li><a href="contact-1.html">contact us 1</a></li>
-                                                    <li><a href="contact-2.html">contact us 2</a></li>
-                                                    <li><a href="companies.html">companies</a></li>
-                                                    <li><a href="company-page-1.html">company page 1</a></li>
-                                                    <li><a href="company-page-2.html">company page 2</a></li>
-                                                </ul>
 
-                                            </div>
-                                        </div>
-                                        <!-- End of Mega Menu Inner -->
-                                    </li>
-                                </ul>
                             </li>
                             <!-- End of Mega Menu Item -->
 
@@ -137,148 +119,21 @@
 
 
     <!-- ===== Start of Main Search Section ===== -->
-    <section class="main overlay-black" id="main">
+    <section class="main overlay-black" id="main" style="height: 250px;">
 
 
         <!-- Start of Wrapper -->
         <div class="container wrapper">
-            <h1 class="capitalize text-center text-white">My teavel</h1>
+            <h1 class="capitalize text-center text-white">Blog</h1>
         </div>
         <!-- End of Wrapper -->
 
     </section>
     <!-- ===== End of Main Search Section ===== -->
 
-    <!-- ===== Start of Popular Categories Section ===== -->
-    <section class="ptb80" id="categories">
-        <div class="container" id="About">
-
-            <div class="section-title">
-                <h2></h2>
-            </div>
-
-            <div class="row nomargin">
-                <!-- Start of Category div -->
-                <div class="col-md-4 col-sm-4 col-xs-4 cat-wrapper">
-
-                </div>
-                <!-- End of Category div -->
-
-                <!-- Start of Category div -->
-                <div class="col-md-4 col-sm-4 col-xs-4 cat-wrapper">
-                    <div class="category ptb30">
-
-                        <!-- Icon -->
-                        <div class="category-icon">
-                            <i class="fa fa-hotel"></i>
-                        </div>
-
-                        <!-- Category Info - Title -->
-                        <div class="category-info pt30">
-                            <a href="">ความทรงจำของฉัน</a>
-
-                        </div>
-
-                    </div>
-                </div>
-                <!-- End of Category div -->
 
 
-                <!-- End of Category div -->
-
-            </div>
-
-
-            <div class="row pt40 nomargin">
-                <!-- Start of Category div -->
-                <div class="col-md-4 col-sm-4 col-xs-4 cat-wrapper">
-                    <div class="category ptb30">
-
-                        <!-- Icon -->
-                        <div class="category-icon">
-                            <i class="fa fa-exchange"></i>
-                        </div>
-
-                        <!-- Category Info - Title -->
-                        <div class="category-info pt30">
-                            <a href="/exchang">สถานที่ถูกใจ</a>
-
-                        </div>
-
-                    
-
-                    </div>
-                </div>
-                <!-- End of Category div -->
-                <div class="col-md-4 col-sm-4col-xs-4 cat-wrapper">
-                    <div class="category ptb30">
-
-                        <!-- Icon -->
-                        <div class="category-icon">
-                            <i class="fa fa-location-arrow"></i>
-                        </div>
-
-                        <!-- Category Info - Title -->
-                        <div class="category-info pt30">
-                            <a
-                                href="https://www.google.com/travel/explore?tcfs&ved=0CAMQyJABahcKEwjo6Y7Mz9PtAhUAAAAAHQAAAAAQDQ&ictx=3&hl=en&gl=TH">สถานที่ที่บันทึกไว้</a>
-
-                        </div>
-
-                        
-
-                    </div>
-                </div>
-
-                <div class="col-md-4 col-sm-4 col-xs-4 cat-wrapper">
-                    <div class="category ptb30">
-
-                        <!-- Icon -->
-                        <div class="category-icon">
-                            <i class="fa fa-plane"></i>
-                        </div>
-
-                        <!-- Category Info - Title -->
-                        <div class="category-info pt30">
-                            <a
-                                href="https://www.google.com/travel/flights?tfs=CBwQARoaagwIAhIIL20vMGZuMmcSCjIwMjEtMDEtMDIaGhIKMjAyMS0wMS0wNnIMCAISCC9tLzBmbjJncAGCAQsI____________AUABSAGYAQE">จองเที่ยวบิน</a>
-                           
-                        </div>
-
-                       
-
-                    </div>
-                </div>
-
-            </div>
-
-    </section>
-    <!-- ===== End of Popular Categories Section ===== -->
-
-    <!-- =============== Start of Page Header 1 Section =============== -->
-    <section class="page-header">
-        <div class="container">
-
-            <!-- Start of Page Title -->
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>ความทรงจำของฉัน</h2>
-                </div>
-            </div>
-            <!-- End of Page Title -->
-
-            <!-- Start of Breadcrumb -->
-            <div class="row">
-                <div class="col-md-12">
-                    <ul class="breadcrumb">
-                        <li><a href="#">home</a></li>
-                        <li class="active">for canditates</li>
-                    </ul>
-                </div>
-            </div>
-            <!-- End of Breadcrumb -->
-
-        </div>
+    </div>
     </section>
     <!-- =============== End of Page Header 1 Section =============== -->
 
@@ -292,8 +147,9 @@
                 <!-- Start of Resume Details -->
                 <div class="row">
                     <div class="col-md-12">
-                        <div id="img-show" class="row col-12">
-
+                        <div id="img-show" class="ptb20 row">
+                        </div>
+                        <div id="content-show" class="ptb20">
                         </div>
 
                         <!-- Form Group -->
@@ -303,8 +159,8 @@
                             <!-- Upload Button -->
                             <div class="upload-file-btn">
                                 <span><i class="fa fa-upload"></i> Upload</span>
-                                <input type="file" id="upload-file" onchange="upload(this.files[0])" name="application_attachment"
-                                    accept=".jpg,.png,.gif">
+                                <input type="file" id="upload-file" onchange="upload(this.files[0])"
+                                    name="application_attachment" accept=".jpg,.png,.gif">
                             </div>
                         </div>
 
@@ -312,26 +168,34 @@
                             integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
                             crossorigin="anonymous"></script>
                         <script>
-                             function upload (file) {
+                            var posts = {
+                                content: '',
+                                picture: [],
+                            };
+
+                            function upload(file) {
                                 var reader = new FileReader();
                                 reader.readAsDataURL(file);
 
                                 reader.onload = function (e) {
                                     file = e.target.result;
-                                $('#img-show').append(`<div class="col-2">
-                                    <a class="hover-link"><img src="${file}" width="150"
-                                            class="img-responsive" alt=""></a>
-                                    <div class="date">
-                                        <span class="day">15</span>
-                                        <span class="publish-month">Mar</span>
-                                    </div>
-                                </div>`)
-
-                                  //file=reader.results
+                                    posts.picture.push(file);
                                 };
-
-
                             }
+
+                            $(document).ready(function () {
+                               
+                                $('#submit').on('click', function () {
+                                    posts.picture.forEach(value => {
+                                        $('#img-show').append(`<div class="col-md-2 p-10">
+                                            <img src="${value}" width="150"
+                                                    class="img-responsive" alt="">
+                                        </div>`);
+                                    })
+                                    var myContent = tinymce.activeEditor.getContent();
+                                    $('#content-show').replaceWith(myContent);
+                                });
+                            });
                         </script>
 
 
@@ -343,7 +207,7 @@
 
                         <!-- Form Group -->
                         <div class="form-group pt30 nomargin" id="last">
-                            <button class="btn btn-blue btn-effect">submit</button>
+                            <button type="button" class="btn btn-blue btn-effect" id="submit">submit</button>
                         </div>
 
                     </div>
@@ -357,102 +221,6 @@
     </section>
     <!-- ===== End of Main Wrapper Section ===== -->
 
-
-    <!-- ===== End of Login Pop Up div ===== -->
-    <!-- =============== Start of Page Header 1 Section =============== -->
-    <section class="page-header">
-        <div class="container">
-
-            <!-- Start of Page Title -->
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>สถานที่ที่บันทึกไว้</h2>
-                </div>
-            </div>
-            <!-- End of Page Title -->
-
-            <!-- Start of Breadcrumb -->
-            <div class="row">
-                <div class="col-md-12">
-                    <ul class="breadcrumb">
-                        <li><a href="#">home</a></li>
-                        <li class="active">for canditates</li>
-                    </ul>
-                </div>
-            </div>
-            <!-- End of Breadcrumb -->
-
-        </div>
-    </section>
-    <!-- =============== End of Page Header 1 Section =============== -->
-
-    <!-- ===== Start of Blog Listing Section ===== -->
-    <section class="blog-listing ptb80" id="version1">
-        <div class="container">
-            <div class="row">
-
-                <!-- Start of Blog Posts -->
-                <div class="col-md-8 col-xs-12 blog-posts-wrapper">
-
-                    <!-- Start of Blog Post Article 1 -->
-                    <article class="col-md-12 blog-post">
-                        <!-- Blog Post Thumbnail -->
-                        <div class="col-md-4 blog-thumbnail">
-                            <a href="blog-post-right-sidebar.html" class="hover-link"><img src="images/blog/blog1.jpg"
-                                    class="img-responsive" alt=""></a>
-                            <div class="date">
-                                <span class="day">15</span>
-                                <span class="publish-month">Mar</span>
-                            </div>
-                        </div>
-
-                        <!-- Blog Post Description -->
-                        <div class="col-md-8 blog-desc">
-                            <h5><a href="blog-post-right-sidebar.html">top 10 tips for web developers</a></h5>
-                            <div class="post-detail pt10 pb20">
-                                <span><i class="fa fa-user"></i>Author</span>
-                                <span><i class="fa fa-clock-o"></i>4:30</span>
-                                <span><i class="fa fa-comments-o"></i>12 Comments</span>
-                            </div>
-
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                                has been the industry's standard dummy text ever since the 1500s, when an unknown
-                                printer took a galley of type and scrambled it to make a type specimen book....</p>
-                            <a href="blog-post-right-sidebar.html" class="btn btn-blue btn-effect mt10">read more</a>
-                        </div>
-                    </article>
-                </div>
-                <!-- End of Blog Post Article 3 -->
-            </div>
-        </div>
-    </section>
-
-    <!-- =============== Start of Page Header 1 Section =============== -->
-    <section class="page-header">
-        <div class="container">
-
-            <!-- Start of Page Title -->
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>สถานที่ถูกใจ</h2>
-                </div>
-            </div>
-            <!-- End of Page Title -->
-
-            <!-- Start of Breadcrumb -->
-            <div class="row">
-                <div class="col-md-12">
-                    <ul class="breadcrumb">
-                        <li><a href="#">home</a></li>
-                        <li class="active">for canditates</li>
-                    </ul>
-                </div>
-            </div>
-            <!-- End of Breadcrumb -->
-
-        </div>
-    </section>
-    <!-- =============== End of Page Header 1 Section =============== -->
 
 
 
